feat: signin and signup pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   lottie: ^2.6.0
   firebase_core: ^2.15.1
   firebase_auth: ^4.9.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
