--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_auth: ^4.9.0
   provider: ^6.0.5
+  cloud_firestore: ^4.9.1
 
 dev_dependencies:
   flutter_test:
