--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.9.0
   provider: ^6.0.5
   cloud_firestore: ^4.9.1
+  mask_text_input_formatter: ^2.5.0
 
 dev_dependencies:
   flutter_test:
