--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^6.0.5
   cloud_firestore: ^4.9.1
   mask_text_input_formatter: ^2.5.0
+  flutter_native_splash: ^2.3.2
 
 dev_dependencies:
   flutter_test:
