--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -23,11 +23,11 @@ flutter_native_splash:
   # The branding property allows you to specify an image used as branding in the splash screen.
   # It must be a png file. It is supported for Android, iOS and the Web.  For Android 12,
   # see the Android 12 section below.
-  branding: assets/brand.png
+  # branding: assets/brand.png
 
   # To position the branding image at the bottom of the screen you can use bottom, bottomRight,
   # and bottomLeft. The default values is bottom if not specified or specified something else.
-  branding_mode: bottom
+  # branding_mode: bottom
 
   # The color_dark, background_image_dark, image_dark, branding_dark are parameters that set the background
   # and image when the device is in dark mode. If they are not specified, the app will use the
@@ -96,7 +96,7 @@ flutter_native_splash:
   #background_image_dark_web: "assets/dark-background-web.png"
   #branding_android: assets/brand-android.png
   #branding_dark_android: assets/dart_dark-android.png
-  branding_ios: assets/brand.png
+  # branding_ios: assets/brand.png
   #branding_dark_ios: assets/dart_dark-ios.gif
 
   # The position of the splash image can be set with android_gravity, ios_content_mode, and
